// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataCollectorsCard should render correctly - no data 1`] = `
<DocumentFragment>
  <div
    class="pf-v5-c-card"
    data-ouia-component-id="system-properties-card"
    data-ouia-component-type="PF5/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-v5-c-card__body"
    >
      <div
        class="pf-v5-l-stack pf-m-gutter"
      >
        <div
          class="pf-v5-l-stack__item"
        >
          <div
            class="pf-v5-c-content"
          >
            <h1
              class=""
              data-ouia-component-id="SystemPropertiesCardTitle"
              data-ouia-component-type="PF5/Text"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              Data collectors
            </h1>
          </div>
        </div>
        <div
          class="pf-v5-l-stack__item pf-m-fill"
        >
          <table
            aria-label="Data collectors"
            class="pf-v5-c-table pf-m-grid-md pf-m-compact pf-m-no-border-rows"
            data-ouia-component-id="OUIA-Generated-Table-1"
            data-ouia-component-type="PF5/Table"
            data-ouia-safe="true"
            role="grid"
          >
            <thead
              class="pf-v5-c-table__thead"
            >
              <tr
                class="pf-v5-c-table__tr ins-c__no-border"
                data-ouia-component-id="OUIA-Generated-TableRow-1"
                data-ouia-component-type="PF5/TableRow"
                data-ouia-safe="true"
              >
                <th
                  class="pf-v5-c-table__th"
                  tabindex="-1"
                />
                <th
                  class="pf-v5-c-table__th"
                  scope="col"
                  tabindex="-1"
                >
                  Name
                </th>
                <th
                  class="pf-v5-c-table__th"
                  scope="col"
                  tabindex="-1"
                >
                  Status
                </th>
                <th
                  class="pf-v5-c-table__th"
                  scope="col"
                  tabindex="-1"
                >
                  Last upload
                </th>
              </tr>
            </thead>
            <tbody
              class="pf-v5-c-table__tbody"
              role="rowgroup"
            >
              <tr
                class="pf-v5-c-table__tr"
                data-ouia-component-id="OUIA-Generated-TableRow-2"
                data-ouia-component-type="PF5/TableRow"
                data-ouia-safe="true"
              >
                <td
                  class="pf-v5-c-table__td pf-v5-c-table__toggle"
                  style="padding-left: 0px;"
                  tabindex="-1"
                >
                  <button
                    aria-disabled="false"
                    aria-expanded="false"
                    aria-label="Details"
                    aria-labelledby="simple-node0 expand-toggle0"
                    class="pf-v5-c-button pf-m-plain"
                    data-ouia-component-id="OUIA-Generated-Button-plain-1"
                    data-ouia-component-type="PF5/Button"
                    data-ouia-safe="true"
                    id="expand-toggle0"
                    type="button"
                  >
                    <div
                      class="pf-v5-c-table__toggle-icon"
                    >
                      <svg
                        aria-hidden="true"
                        class="pf-v5-svg"
                        fill="currentColor"
                        height="1em"
                        role="img"
                        viewBox="0 0 320 512"
                        width="1em"
                      >
                        <path
                          d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z"
                        />
                      </svg>
                    </div>
                  </button>
                </td>
                <td
                  class="pf-v5-c-table__td"
                  data-label="Name"
                  tabindex="-1"
                >
                  insights-client
                </td>
                <td
                  class="pf-v5-c-table__td"
                  data-label="Status"
                  tabindex="-1"
                >
                  N/A
                </td>
                <td
                  class="pf-v5-c-table__td"
                  data-label="Last upload"
                  tabindex="-1"
                >
                  N/A
                </td>
              </tr>
              <tr
                class="pf-v5-c-table__tr pf-v5-c-table__expandable-row"
                data-ouia-component-id="OUIA-Generated-TableRow-3"
                data-ouia-component-type="PF5/TableRow"
                data-ouia-safe="true"
                hidden=""
              >
                <td
                  class="pf-v5-c-table__td"
                  tabindex="-1"
                />
                <td
                  class="pf-v5-c-table__td"
                  colspan="3"
                  tabindex="-1"
                >
                  <div
                    class="pf-v5-c-table__expandable-row-content"
                  >
                    <div
                      class="pf-v5-l-flex"
                    >
                      <div
                        class="ins-c__flex-row-margin"
                      >
                        Insights id:
                      </div>
                      <div
                        class="pf-m-grow"
                      >
                        N/A
                      </div>
                    </div>
                  </div>
                </td>
              </tr>
            </tbody>
            <tbody
              class="pf-v5-c-table__tbody"
              role="rowgroup"
            >
              <tr
                class="pf-v5-c-table__tr"
                data-ouia-component-id="OUIA-Generated-TableRow-4"
                data-ouia-component-type="PF5/TableRow"
                data-ouia-safe="true"
              >
                <td
                  class="pf-v5-c-table__td pf-v5-c-table__toggle"
                  style="padding-left: 0px;"
                  tabindex="-1"
                >
                  <button
                    aria-disabled="false"
                    aria-expanded="false"
                    aria-label="Details"
                    aria-labelledby="simple-node1 expand-toggle1"
                    class="pf-v5-c-button pf-m-plain"
                    data-ouia-component-id="OUIA-Generated-Button-plain-2"
                    data-ouia-component-type="PF5/Button"
                    data-ouia-safe="true"
                    id="expand-toggle1"
                    type="button"
                  >
                    <div
                      class="pf-v5-c-table__toggle-icon"
                    >
                      <svg
                        aria-hidden="true"
                        class="pf-v5-svg"
                        fill="currentColor"
                        height="1em"
                        role="img"
                        viewBox="0 0 320 512"
                        width="1em"
                      >
                        <path
                          d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z"
                        />
                      </svg>
                    </div>
                  </button>
                </td>
                <td
                  class="pf-v5-c-table__td"
                  data-label="Name"
                  tabindex="-1"
                >
                  subscription-manager
                </td>
                <td
                  class="pf-v5-c-table__td"
                  data-label="Status"
                  tabindex="-1"
                >
                  N/A
                </td>
                <td
                  class="pf-v5-c-table__td"
                  data-label="Last upload"
                  tabindex="-1"
                >
                  N/A
                </td>
              </tr>
              <tr
                class="pf-v5-c-table__tr pf-v5-c-table__expandable-row"
                data-ouia-component-id="OUIA-Generated-TableRow-5"
                data-ouia-component-type="PF5/TableRow"
                data-ouia-safe="true"
                hidden=""
              >
                <td
                  class="pf-v5-c-table__td"
                  tabindex="-1"
                />
                <td
                  class="pf-v5-c-table__td"
                  colspan="3"
                  tabindex="-1"
                >
                  <div
                    class="pf-v5-c-table__expandable-row-content"
                  >
                    <div
                      class="pf-v5-l-flex"
                    >
                      <div
                        class="ins-c__flex-row-margin"
                      >
                        Subscription manager id:
                      </div>
                      <div
                        class="pf-m-grow"
                      >
                        N/A
                      </div>
                    </div>
                  </div>
                </td>
              </tr>
            </tbody>
            <tbody
              class="pf-v5-c-table__tbody"
              role="rowgroup"
            >
              <tr
                class="pf-v5-c-table__tr"
                data-ouia-component-id="OUIA-Generated-TableRow-6"
                data-ouia-component-type="PF5/TableRow"
                data-ouia-safe="true"
              >
                <td
                  class="pf-v5-c-table__td"
                  tabindex="-1"
                />
                <td
                  class="pf-v5-c-table__td"
                  data-label="Name"
                  tabindex="-1"
                >
                  Satellite/Discovery
                </td>
                <td
                  class="pf-v5-c-table__td"
                  data-label="Status"
                  tabindex="-1"
                >
                  N/A
                </td>
                <td
                  class="pf-v5-c-table__td"
                  data-label="Last upload"
                  tabindex="-1"
                >
                  N/A
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DataCollectorsCard should render correctly with data 1`] = `
<DocumentFragment>
  <div
    class="pf-v5-c-card"
    data-ouia-component-id="system-properties-card"
    data-ouia-component-type="PF5/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-v5-c-card__body"
    >
      <div
        class="pf-v5-l-stack pf-m-gutter"
      >
        <div
          class="pf-v5-l-stack__item"
        >
          <div
            class="pf-v5-c-content"
          >
            <h1
              class=""
              data-ouia-component-id="SystemPropertiesCardTitle"
              data-ouia-component-type="PF5/Text"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              Data collectors
            </h1>
          </div>
        </div>
        <div
          class="pf-v5-l-stack__item pf-m-fill"
        >
          <table
            aria-label="Data collectors"
            class="pf-v5-c-table pf-m-grid-md pf-m-compact pf-m-no-border-rows"
            data-ouia-component-id="OUIA-Generated-Table-2"
            data-ouia-component-type="PF5/Table"
            data-ouia-safe="true"
            role="grid"
          >
            <thead
              class="pf-v5-c-table__thead"
            >
              <tr
                class="pf-v5-c-table__tr ins-c__no-border"
                data-ouia-component-id="OUIA-Generated-TableRow-7"
                data-ouia-component-type="PF5/TableRow"
                data-ouia-safe="true"
              >
                <th
                  class="pf-v5-c-table__th"
                  tabindex="-1"
                />
                <th
                  class="pf-v5-c-table__th"
                  scope="col"
                  tabindex="-1"
                >
                  Name
                </th>
                <th
                  class="pf-v5-c-table__th"
                  scope="col"
                  tabindex="-1"
                >
                  Status
                </th>
                <th
                  class="pf-v5-c-table__th"
                  scope="col"
                  tabindex="-1"
                >
                  Last upload
                </th>
              </tr>
            </thead>
            <tbody
              class="pf-v5-c-table__tbody"
              role="rowgroup"
            >
              <tr
                class="pf-v5-c-table__tr"
                data-ouia-component-id="OUIA-Generated-TableRow-8"
                data-ouia-component-type="PF5/TableRow"
                data-ouia-safe="true"
              >
                <td
                  class="pf-v5-c-table__td pf-v5-c-table__toggle"
                  style="padding-left: 0px;"
                  tabindex="-1"
                >
                  <button
                    aria-disabled="false"
                    aria-expanded="false"
                    aria-label="Details"
                    aria-labelledby="simple-node0 expand-toggle0"
                    class="pf-v5-c-button pf-m-plain"
                    data-ouia-component-id="OUIA-Generated-Button-plain-3"
                    data-ouia-component-type="PF5/Button"
                    data-ouia-safe="true"
                    id="expand-toggle0"
                    type="button"
                  >
                    <div
                      class="pf-v5-c-table__toggle-icon"
                    >
                      <svg
                        aria-hidden="true"
                        class="pf-v5-svg"
                        fill="currentColor"
                        height="1em"
                        role="img"
                        viewBox="0 0 320 512"
                        width="1em"
                      >
                        <path
                          d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z"
                        />
                      </svg>
                    </div>
                  </button>
                </td>
                <td
                  class="pf-v5-c-table__td"
                  data-label="Name"
                  tabindex="-1"
                >
                  insights-client
                </td>
                <td
                  class="pf-v5-c-table__td"
                  data-label="Status"
                  tabindex="-1"
                >
                  Active
                </td>
                <td
                  class="pf-v5-c-table__td"
                  data-label="Last upload"
                  tabindex="-1"
                >
                  13 May 2022 07:42 UTC
                </td>
              </tr>
              <tr
                class="pf-v5-c-table__tr pf-v5-c-table__expandable-row"
                data-ouia-component-id="OUIA-Generated-TableRow-9"
                data-ouia-component-type="PF5/TableRow"
                data-ouia-safe="true"
                hidden=""
              >
                <td
                  class="pf-v5-c-table__td"
                  tabindex="-1"
                />
                <td
                  class="pf-v5-c-table__td"
                  colspan="3"
                  tabindex="-1"
                >
                  <div
                    class="pf-v5-c-table__expandable-row-content"
                  >
                    <div
                      class="pf-v5-l-flex"
                    >
                      <div
                        class="ins-c__flex-row-margin"
                      >
                        Insights id:
                      </div>
                      <div
                        class="pf-m-grow"
                      >
                        1234
                      </div>
                    </div>
                  </div>
                </td>
              </tr>
            </tbody>
            <tbody
              class="pf-v5-c-table__tbody"
              role="rowgroup"
            >
              <tr
                class="pf-v5-c-table__tr"
                data-ouia-component-id="OUIA-Generated-TableRow-10"
                data-ouia-component-type="PF5/TableRow"
                data-ouia-safe="true"
              >
                <td
                  class="pf-v5-c-table__td pf-v5-c-table__toggle"
                  style="padding-left: 0px;"
                  tabindex="-1"
                >
                  <button
                    aria-disabled="false"
                    aria-expanded="false"
                    aria-label="Details"
                    aria-labelledby="simple-node1 expand-toggle1"
                    class="pf-v5-c-button pf-m-plain"
                    data-ouia-component-id="OUIA-Generated-Button-plain-4"
                    data-ouia-component-type="PF5/Button"
                    data-ouia-safe="true"
                    id="expand-toggle1"
                    type="button"
                  >
                    <div
                      class="pf-v5-c-table__toggle-icon"
                    >
                      <svg
                        aria-hidden="true"
                        class="pf-v5-svg"
                        fill="currentColor"
                        height="1em"
                        role="img"
                        viewBox="0 0 320 512"
                        width="1em"
                      >
                        <path
                          d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z"
                        />
                      </svg>
                    </div>
                  </button>
                </td>
                <td
                  class="pf-v5-c-table__td"
                  data-label="Name"
                  tabindex="-1"
                >
                  subscription-manager
                </td>
                <td
                  class="pf-v5-c-table__td"
                  data-label="Status"
                  tabindex="-1"
                >
                  N/A
                </td>
                <td
                  class="pf-v5-c-table__td"
                  data-label="Last upload"
                  tabindex="-1"
                >
                  N/A
                </td>
              </tr>
              <tr
                class="pf-v5-c-table__tr pf-v5-c-table__expandable-row"
                data-ouia-component-id="OUIA-Generated-TableRow-11"
                data-ouia-component-type="PF5/TableRow"
                data-ouia-safe="true"
                hidden=""
              >
                <td
                  class="pf-v5-c-table__td"
                  tabindex="-1"
                />
                <td
                  class="pf-v5-c-table__td"
                  colspan="3"
                  tabindex="-1"
                >
                  <div
                    class="pf-v5-c-table__expandable-row-content"
                  >
                    <div
                      class="pf-v5-l-flex"
                    >
                      <div
                        class="ins-c__flex-row-margin"
                      >
                        Subscription manager id:
                      </div>
                      <div
                        class="pf-m-grow"
                      >
                        N/A
                      </div>
                    </div>
                  </div>
                </td>
              </tr>
            </tbody>
            <tbody
              class="pf-v5-c-table__tbody"
              role="rowgroup"
            >
              <tr
                class="pf-v5-c-table__tr"
                data-ouia-component-id="OUIA-Generated-TableRow-12"
                data-ouia-component-type="PF5/TableRow"
                data-ouia-safe="true"
              >
                <td
                  class="pf-v5-c-table__td"
                  tabindex="-1"
                />
                <td
                  class="pf-v5-c-table__td"
                  data-label="Name"
                  tabindex="-1"
                >
                  Satellite/Discovery
                </td>
                <td
                  class="pf-v5-c-table__td"
                  data-label="Status"
                  tabindex="-1"
                >
                  N/A
                </td>
                <td
                  class="pf-v5-c-table__td"
                  data-label="Last upload"
                  tabindex="-1"
                >
                  N/A
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DataCollectorsCard should render custom collectors 1`] = `
<DocumentFragment>
  <div
    class="pf-v5-c-card"
    data-ouia-component-id="system-properties-card"
    data-ouia-component-type="PF5/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-v5-c-card__body"
    >
      <div
        class="pf-v5-l-stack pf-m-gutter"
      >
        <div
          class="pf-v5-l-stack__item"
        >
          <div
            class="pf-v5-c-content"
          >
            <h1
              class=""
              data-ouia-component-id="SystemPropertiesCardTitle"
              data-ouia-component-type="PF5/Text"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              Data collectors
            </h1>
          </div>
        </div>
        <div
          class="pf-v5-l-stack__item pf-m-fill"
        >
          <table
            aria-label="Data collectors"
            class="pf-v5-c-table pf-m-grid-md pf-m-compact pf-m-no-border-rows"
            data-ouia-component-id="OUIA-Generated-Table-3"
            data-ouia-component-type="PF5/Table"
            data-ouia-safe="true"
            role="grid"
          >
            <thead
              class="pf-v5-c-table__thead"
            >
              <tr
                class="pf-v5-c-table__tr ins-c__no-border"
                data-ouia-component-id="OUIA-Generated-TableRow-13"
                data-ouia-component-type="PF5/TableRow"
                data-ouia-safe="true"
              >
                <th
                  class="pf-v5-c-table__th"
                  tabindex="-1"
                />
                <th
                  class="pf-v5-c-table__th"
                  scope="col"
                  tabindex="-1"
                >
                  Name
                </th>
                <th
                  class="pf-v5-c-table__th"
                  scope="col"
                  tabindex="-1"
                >
                  Status
                </th>
                <th
                  class="pf-v5-c-table__th"
                  scope="col"
                  tabindex="-1"
                >
                  Last upload
                </th>
              </tr>
            </thead>
            <tbody
              class="pf-v5-c-table__tbody"
              role="rowgroup"
            >
              <tr
                class="pf-v5-c-table__tr"
                data-ouia-component-id="OUIA-Generated-TableRow-14"
                data-ouia-component-type="PF5/TableRow"
                data-ouia-safe="true"
              >
                <td
                  class="pf-v5-c-table__td pf-v5-c-table__toggle"
                  style="padding-left: 0px;"
                  tabindex="-1"
                >
                  <button
                    aria-disabled="false"
                    aria-expanded="false"
                    aria-label="Details"
                    aria-labelledby="simple-node0 expand-toggle0"
                    class="pf-v5-c-button pf-m-plain"
                    data-ouia-component-id="OUIA-Generated-Button-plain-5"
                    data-ouia-component-type="PF5/Button"
                    data-ouia-safe="true"
                    id="expand-toggle0"
                    type="button"
                  >
                    <div
                      class="pf-v5-c-table__toggle-icon"
                    >
                      <svg
                        aria-hidden="true"
                        class="pf-v5-svg"
                        fill="currentColor"
                        height="1em"
                        role="img"
                        viewBox="0 0 320 512"
                        width="1em"
                      >
                        <path
                          d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z"
                        />
                      </svg>
                    </div>
                  </button>
                </td>
                <td
                  class="pf-v5-c-table__td"
                  data-label="Name"
                  tabindex="-1"
                >
                  collector name
                </td>
                <td
                  class="pf-v5-c-table__td"
                  data-label="Status"
                  tabindex="-1"
                />
                <td
                  class="pf-v5-c-table__td"
                  data-label="Last upload"
                  tabindex="-1"
                >
                  01 Jan 2260 00:00 UTC
                </td>
              </tr>
              <tr
                class="pf-v5-c-table__tr pf-v5-c-table__expandable-row"
                data-ouia-component-id="OUIA-Generated-TableRow-15"
                data-ouia-component-type="PF5/TableRow"
                data-ouia-safe="true"
                hidden=""
              >
                <td
                  class="pf-v5-c-table__td"
                  tabindex="-1"
                />
                <td
                  class="pf-v5-c-table__td"
                  colspan="3"
                  tabindex="-1"
                >
                  <div
                    class="pf-v5-c-table__expandable-row-content"
                  >
                    <div
                      class="pf-v5-l-flex"
                    >
                      <div
                        class="ins-c__flex-row-margin"
                      >
                        reporter id:
                      </div>
                      <div
                        class="pf-m-grow"
                      >
                        1234567
                      </div>
                    </div>
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
